<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LetsPlay</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_take_image1">Take Photo Player 1</string>
    <string name="action_take_image2">Take Photo Player 2</string>
    <string name="action_restart_same_photos">Restart with Same Photos</string>
    <string name="action_restart_new_photos">Restart Without Photos</string>
    <string name="action_exit">Exit</string>
    
    

</resources>
