<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	 -->
    <item
    	android:id="@+id/take_image1"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_take_image1"/>
    
    <item
    	android:id="@+id/take_image2"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_take_image2"/>
    <item
    	android:id="@+id/restart_same_photos_menu_item"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_restart_same_photos"/>
    <item
    	android:id="@+id/restart_new_photosmenu_item"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_restart_new_photos"/>
    <item
    	android:id="@+id/exit_menu"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
    
</menu>

